@@ -11,7 +11,7 @@ Description =
 	English = "GUI Library",
 }
 Author = "Baanano"
-Version = "0.4.4 r4"
+Version = "0.4.4 r5"
 Email = "baanano.rift@gmail.com"
 Environment = "1.9"
 Dependencies =
@@ -36,4 +36,5 @@ RunOnStartup =
 	"DataGrid.lua",
 	"Window.lua",
 	"TabControl.lua",
+	"PopupManager.lua",
 }
